--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,16 @@
-<h1> <%=@product.name%> </h1>
 
+
+<h1> Viewing product info for: <%=@product.name%> </h1>
+
+<p> Price: <%=@product.description%> </p>
+<p> Description</p>
+<%if admmin?%>
+<%= render "form", product: @product %>
+
+
+  <p><%= link_to "Destroy", product_path(@product), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Are you sure?"
+                  } %>
+    </p>
+<%end%>
