Added checkout and fixed add to cart feature

--- a/app/views/cart/new.html.erb
+++ b/app/views/cart/new.html.erb
@@ -6,7 +6,8 @@
   <p><%=product.product.name%></p>
 <% end %>
 
-<%=form_with model: @purchase do |form|%>
+<%=form_with model: @purchase, url:"/cart" do |form|%>
+
 <%=form.submit "Checkout"%>
 
 <%end%>
