--- a/app/views/ecommerce/index.html.erb
+++ b/app/views/ecommerce/index.html.erb
@@ -16,6 +16,7 @@
 <ul>
 <li> <%= link_to  "Product", new_product_path %>    </li>
 
-<li> <%= link_to "Cart", cart_index_path%> </li>
+<li> <%= link_to "Cart", new_cart_path%> </li>
+<li> <%= link_to "Purchases", purchase_index_path%> </li> 
 
 <ul>
