--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,7 +18,7 @@
 <%end%>
 <%if customer?%>
 <%= form_with(model: CartItem.new, url: add_to_cart_product_path, method: :post) do |form| %>
-  <%= form.text_field :product_id, value: @product.id %>
+  <%= form.hidden_field :product_id, value: @product.id %>
   <%= form.submit "Add to Cart" %>
 <% end %>
 <%end%>
