--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,6 +19,7 @@
 <%if customer?%>
 <%= form_with(model: CartItem.new, url: add_to_cart_product_path, method: :post) do |form| %>
   <%= form.hidden_field :product_id, value: @product.id %>
+  <%= form.number_field :quantity, placeholder: 'quantity', value:1, required:true%>
   <%= form.submit "Add to Cart" %>
 <% end %>
 <%end%>
