--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,25 +1,27 @@
 
+<%= link_to "<-- Back to product list", "/products/new" %>
+  <%= turbo_frame_tag :modal do %>
+  <h1> Viewing product info for: <%=@product.name%> </h1>
 
-<h1> Viewing product info for: <%=@product.name%> </h1>
-
-<p> Price: <%=@product.price%> </p>
-<p> Description: <%=@product.description%></p>
-<%if admin?%>
-<%= render "form", product: @product %>
-
-
-  <p><%= link_to "Destroy", product_path(@product), data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %>
-    </p>
+  <p> Price: <%=@product.price%> </p>
+  <p> Description: <%=@product.description%></p>
+  <%if admin?%>
+  <%= render "form", product: @product %>
 
 
-<%end%>
-<%if customer?%>
-<%= form_with(model: CartItem.new, url: add_to_cart_product_path, method: :post) do |form| %>
-  <%= form.hidden_field :product_id, value: @product.id %>
-  <%= form.number_field :quantity, placeholder: 'quantity', value:1, required:true%>
-  <%= form.submit "Add to Cart" %>
+    <p><%= link_to "Destroy", product_path(@product), data: {
+                      turbo_method: :delete,
+                      turbo_confirm: "Are you sure?"
+                    } %>
+      </p>
+
+
+  <%end%>
+    <%if customer?%>
+    <%= form_with(model: CartItem.new, url: add_to_cart_product_path, method: :post) do |form| %>
+      <%= form.hidden_field :product_id, value: @product.id %>
+      <%= form.number_field :quantity, placeholder: 'quantity', value:1, required:true%>
+      <%= form.submit "Add to Cart" %>
+    <% end %>
+  <% end%>
 <% end %>
-<%end%>
