--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "<-- Back to home", "/" %>
 
 <div>
-<%= form_with url: new_product_path, method: :get do%>
+<%= form_with url: products_path, method: :get do%>
   <%= text_field_tag "filter", nil, placeholder: "Filter"%>
 <%end%>
 </div>
