--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,5 @@
+<%# Partial is for viewing a product%>
+
 <%= form_with model: product do |form| %>
   <div>
     <%= form.label :name %><br>
@@ -18,4 +20,11 @@
   <div>
     <%= form.submit %>
   </div>
+
+      <p><%= link_to "Destroy", product_path(@product), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Are you sure?",
+                    turbo_action: "delete->turbomodal#hideModal"
+                  } %>
+    </p>
 <% end %>
